<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Movie Time\'s Up</string>
    <string name="app_id">1408220052751357</string>
    <string name="app_key1">EZwivKsjfTuR5r3i7YJnV7hm9ceQv0gLC/eiE3BWY3BHlvG4neJc1Og2cCt9dqKXD0y9jQIDAQAB</string>
    <string name="app_key2">qmF+cP2VEjBnDd+6VShD0tAAZ8CnL7LpbJ4PMT3RUYE+zZPgtLIfN+rDKc0HrvMvzJSYfQuQ57KUSM</string>
    <string name="app_key3">8mMWrQKzNUhjzFfeQ+EYG/S8fAk5pSdhHmcJE6vXvEXB1EdzibAqPZIqqOj8YsW/dDvYaJrNqXlTlqwjcb</string>
    <string name="app_key4">/1VWaIol6XZ7bhhC0XXTlhKfD7seZjGlwkCryejNrcjL85vQpQ5AfWAW0moS5ygN0WBGWhin8CxI+BXQgBAd</string> 
    <string name="app_key5">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAkcB5xmQObHgrDQT7bFhC04tjOj9D</string>
    <string name="title_activity_home">Movie Time\'s Up</string>
    <string name="registration">To finish your registration, you must login with Facebook. We\'ll never post without your permission.</string>
    <string name="welcome_message">Welcome, Player</string>
    <string name="you_scored_message"></string>
    <string name="smash_player_name">Smash Player !</string>
    <string name="score">Score: 0</string>
    <string name="network_error">Please check your network connection</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="error_dialog_default_text">No response from server.</string>
    <string name="error_authentication_retry">An error occurred that requires your attention. %1$s</string>
    <string name="error_authentication_reopen">An error occurred, please re-login.</string>
    <string name="error_permission">Please allow us to post on your behalf.</string>
    <string name="error_server">The server is busy, please retry later.</string>
    <string name="error_bad_request">An error occurred, please contact the developer with the following message: %1$s</string>
    <string name="error_unknown">An unknown error occurred, please contact the developer with the following message: %1$s</string>
    <string name="error_fetching_profile">Error fetching your user profile - Please try again</string>
    <string name="error_fetching_friend_bitmap">Error fetching your friend\'s profile picture - Please try again</string>
    <string name="error_switching_screens">Error switching screens - Please try again</string>
    <string name="error_no_scores">"No scores to display"</string>
    <string name="error_updating_user">"Impossible to update user data. Check your network connection."</string>
    <string name="error_user_not_found">"User not found"</string>
    <string name="error_download_file">"Failed to download file"</string>
    <string name="check_movies">"Checking if there are new movies"</string>
    <string name="check_user">"Checking user data"</string>
    <string name="upload_user">"Uploading user data"</string>
    <string name="downloaded_user">"User data downloaded"</string>
    <string name="uploaded_user">"User data uploaded"</string>
    <string name="created_user">"New user created in Server"</string>
    <string name="already_updated_user">"User data already updated"</string>
    <string name="download_user">"Downloading user data from Webservice"</string>
    <string name="movies_downloaded">"Downloaded new movies!"</string>
    <string name="movies_downloaded_false">"You already have all the movies"</string>

    <!-- OPTIONS -->
    <string name="unlock">Unlock</string>
    <string name="buy">Kiosk</string>
    <string name="give_up">Give up</string>
    <string name="play">Action!</string>
    <string name="camera">..camera..</string>
    <string name="lights">lights..</string>
    <string name="bet">Bet</string>
    
    <!-- TITLE CLUES -->
    <string name="year">year</string>
    <string name="decade">decade</string>
    <string name="actor">actor</string>
    <string name="actors">actors</string>
    <string name="character">character</string>
    <string name="characters">characters</string>
    <string name="quote">quote</string>
    <string name="quotes">quotes</string>
    <string name="synopsis">synopsis</string>
    <string name="continent">continent</string>
    <string name="country">country</string>
    <string name="director">director</string>
    <string name="directedby">directed by</string>
    <string name="starredby">starred by</string>
    <string name="trivia">trivia</string>
    <string name="genre">genre</string>
    
    <!-- PHRASES -->
    <string name="times_up">Time\'s Up!</string>
    <string name="day1">Day 1</string>
    <string name="day2">Day 2</string>
    <string name="day3">Day 3</string>
    <string name="day4">Next Days</string>
    <string name="cinema_number">Cinema #</string>
    <string name="is_locked">is locked</string>
    <string name="need_hit">You need hit</string>
    <string name="film_more">films more</string>
    <string name="youvewon">You\'ve won </string>
    <string name="bonus_message">Enter every day to win more seconds</string>
    <string name="secondswon"> seconds!</string>
    <string name="game_over_sub">the movie has been locked</string>
    <string name="game_won">Congrats!</string>
    <string name="you_got">you got</string>
    <string name="new_cult_unlocked">¡Cult film unlocked!</string>
    <string name="new_masterpiece_unlocked">¡Masterpiece unlocked!</string>
    <string name="use_them_to_get_extras">Use them to get some extras</string>
    <string name="new_movies_to_guess">"New movies to guess"</string>
    <string name="enter_to_get_seconds">"Enter today to get extra seconds"</string>
    <string name="and">"and"</string>
    <string name="movies">"Movies"</string>
    <string name="points">points</string>
    <string name="not_enough_seconds">You don\'t have enough seconds</string>
    <string name="buy_seconds">Get more seconds to beat your friends in the kiosk</string>
    <string name="unlock_cost">Unlock costs</string>
    <string name="seconds">seconds</string>
    <string name="give_up_question">Coward, do you want to give up?</string>
    <string name="are_you_ready">Are you ready?</string>
    <string name="upload_score">Upload your score</string>
    <string name="permissions_needed">We need your permission, only for the scoreboard</string>
    <string name="initial_warning">You can\'t stop from this point</string>
    <string name="movie_will_be_locked">This movie will be locked</string>
    <string name="bettext">How many seconds do you need?</string>
    <string name="loading">Loading</string>
    <string name="level_number">Level #</string>
    <string name="unlocked">unlocked</string>    
    <string name="seconds_for_level">You got 2000 seconds</string>  
    <string name="nextlevel">Hit 12 films to get a new level</string>
    <string name="european_achievement">New european achievement unlocked</string>
    <string name="asian_achievement">New asian achievement unlocked</string>
    <string name="american_achievement">New american achievement unlocked</string>
    <string name="exotic_achievement">New exotic achievement unlocked</string>
    <string name="all">Total</string>
    <string name="europe">Europe</string>
    <string name="america">America</string>
    <string name="asia">Asia</string>
    <string name="exotic">Exotic</string>
    <string name="africa">Africa</string>
    <string name="oceania">Oceania</string> 
    <string name="all_description">Total movies from total available</string>
    <string name="europe_description">Movies from Europe</string>
    <string name="america_description">Movies from South and North America</string>
    <string name="asia_description">Movies from Asia</string>
    <string name="exotic_description">Movies from Africa and Oceania</string>
    <string name="share">Share</string>
    <string name="txSearchable">Search..</string>
    <string name="empty_list">No matches.</string> 
	<string name="select_ticket">Select your ticket:</string>
    
    
</resources>