<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:drawable/alert_light_frame"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="24dp"
	android:paddingBottom="24dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout 
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
		    <TextView
		        android:textSize="18sp"
		        android:textStyle="bold"        
		        android:textColor="@android:color/black"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:layout_gravity="center_vertical|right"
				android:text="@string/youvewon"
				android:gravity="center" />
		    <TextView
		        android:id="@+id/points"
		        android:textSize="18sp"
		        android:textStyle="bold"        
		        android:textColor="@android:color/black"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text=" 20 "
				android:gravity="center" />
		    <TextView
		        android:textSize="18sp"
		        android:textStyle="bold"        
		        android:textColor="@android:color/black"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:layout_gravity="center_vertical|left"
				android:text="@string/secondswon"
				android:gravity="center" />
	    </LinearLayout>
	    <TextView
	        android:textSize="16sp"
	        android:textStyle="bold"        
	        android:textColor="@color/greydark"
	        android:layout_marginTop="10dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:gravity="center" 
			android:text="@string/bonus_message"/>
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="5dp">
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/day1"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:gravity="center"
            android:textColor="@color/greydark"
            android:textStyle="bold"
            android:text="@string/day2"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:gravity="center"
            android:textColor="@color/greydark"
            android:textStyle="bold"
            android:text="@string/day3"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.95"
            android:gravity="center"
            android:textColor="@color/greydark"
            android:textStyle="bold"
            android:text="@string/day4"/>
    </LinearLayout>
	<ImageView 
	    android:id="@+id/imagebonus"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:src="@drawable/fidelity_1"/>
	<LinearLayout 
	    android:paddingTop="20dp"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:gravity="center">	    
	    <Button 
	        android:id="@+id/actionButton"
	        android:text="@android:string/ok"
	        android:layout_width="100dp"
	        android:height="40dp"
	        android:layout_height="wrap_content"
	        android:background="@drawable/circle_darkergrey"
	        android:textSize="16sp"
	        android:layout_marginRight="13dp"
	        android:gravity="center"/>  
	</LinearLayout>
</LinearLayout>