<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/clapperboard"
    android:paddingTop="55dp"
	android:paddingBottom="24dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <ProgressBar 
        android:id="@+id/progress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>   
    <LinearLayout 
        android:orientation="vertical"
	    android:paddingLeft="8dp"
	    android:paddingRight="8dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">         
	    <TextView
	        android:textSize="16sp"
	        android:textStyle="bold"     
	        android:layout_marginTop="10dp" 
	        android:textColor="@android:color/white"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:text="@string/bettext"
			android:gravity="center" />	    
		<LinearLayout 
		    android:layout_height="match_parent"
		    android:layout_width="match_parent"
		    android:orientation="horizontal"
		    android:layout_gravity="center"
		    android:gravity="center">
		    <NumberPicker 
		        android:id="@+id/picker"	
		        android:gravity="center"
		        
		        android:background="@android:color/transparent"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"/>
		    <LinearLayout 
		        android:orientation="vertical"
		        android:layout_height="match_parent"
		        android:layout_width="match_parent"
		        android:paddingLeft="15dp"
		        android:paddingTop="8dp"
		        android:layout_weight="1"
		        android:gravity="center">
		        <TextView 
		            android:id="@+id/lightstext"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1.2"
		            android:gravity="center_vertical|left"
		            android:textSize="16sp"
		            android:textStyle="italic"
		            android:textColor="@color/greylight"
		            android:text="@string/lights"/>
		        <TextView 
		            android:id="@+id/cameratext"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1.2"
		            android:gravity="center"
		            android:textSize="20sp"
		            android:textStyle="italic"
		            android:textColor="@color/greylighter"
		            android:text="@string/camera"/>
		        <TextView 
		            android:id="@+id/actiontext"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:gravity="center_vertical|right"
		            android:textSize="24sp"
		            android:textStyle="bold"
		            android:textColor="@color/white"
		            android:text="@string/play"/>
		        <ImageView 
		            android:id="@+id/play"
		            android:src="@drawable/arrow"
		            android:layout_marginTop="5dp"
		            android:layout_width="40dp"
		            android:layout_height="match_parent"
		            android:layout_gravity="right"
		            android:layout_weight="1"/>
		    </LinearLayout>
	    </LinearLayout>
    </LinearLayout>    
</LinearLayout>