<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:drawable/alert_light_frame"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="24dp"
	android:paddingBottom="24dp"
    android:layout_width="350dp"
    android:layout_height="wrap_content">
    <LinearLayout 
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
		    <TextView
		        android:textSize="18sp"
		        android:textStyle="bold"        
		        android:textColor="@android:color/black"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:layout_gravity="center_vertical|right"
				android:text="@string/level_number"
				android:gravity="center" />
		    <TextView
		        android:id="@+id/txLevel"
		        android:textSize="20sp"
		        android:textStyle="bold"        
		        android:textColor="@android:color/black"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text=" 5 "
				android:gravity="center" />
		    <TextView
		        android:textSize="18sp"
		        android:textStyle="bold"        
		        android:textColor="@android:color/black"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:layout_gravity="center_vertical|left"
				android:text="@string/unlocked"
				android:gravity="center" />
	    </LinearLayout>
	    
	    <FrameLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
		    <ImageView 
		        android:src="@drawable/cinema_enable25"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:scaleType="fitCenter"/>
		    <TextView 
		        android:id="@+id/level"
		        android:layout_marginTop="10dp"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:textSize="50sp"
		        android:textColor="@color/white"
		        android:textStyle="bold"
		        android:gravity="center"/>
    	</FrameLayout>
	    <TextView
	        android:textSize="16sp"
	        android:textStyle="bold"        
	        android:textColor="@color/greydark"
	        android:layout_marginTop="10dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:gravity="center" 
			android:text="@string/nextlevel"/>
    </LinearLayout>
	<LinearLayout 
	    android:paddingTop="20dp"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:gravity="center">	    
	    <Button 
	        android:id="@+id/actionButton"
	        android:text="@android:string/ok"
	        android:layout_width="100dp"
	        android:height="40dp"
	        android:layout_height="wrap_content"
	        android:background="@drawable/circle_darkergrey"
	        android:textSize="16sp"
	        android:layout_marginRight="13dp"
	        android:gravity="center"/>  
	</LinearLayout>
</LinearLayout>